@@ -17,6 +17,9 @@
 
 	Clean occasional graphics leftovers after disabling preview.
 
+	Ignore file decorations ('classify') on sorting custom views.  Thanks to
+	filterfalse.
+
 	Fixed pane titles update on switching panes.
 
 	Fixed build on OpenBSD.  Patch by Brian Callahan (a.k.a. ibara).
